<resources>
    <string name="app_name1">ManageCar</string>
    <string name="app_name">Nhom3ManageCar</string>
    <string name="dangNhap">Đăng Nhập</string>
    <string name="dangKy">Đăng Ký</string>
    <string name="xacNhan">Xác Nhận</string>
    <string name="email_hint">Vui lòng nhập email</string>
    <string name="quenMatKhau"><u>Quên mật khẩu?</u></string>
    <string name="trangChu_nav">Trang Chủ</string>
    <string name="hangHoa_nav">Hàng hóa</string>
    <string name="kiemKho_nav">Kiểm kho</string>
    <string name="nhapHang_nav">Nhập hàng</string>
    <string name="xuatHang_nav">Xuất hàng</string>
    <string name="baohanh_nav">Bảo hành</string>
    <string name="lienHe_nav">Liên hệ</string>
    <string name="dangXuat_nav">Đăng xuất</string>
    <string name="thoat_nav">Thoát</string>
    <string name="sdt">Số điện thoại</string>
    <string name="xuatFile">Xuất File</string>

    <string name="tim_kiem">Nhập vào sản phẩm cần tìm</string>
    <string name="drawer_open_nav">Open navigation drawer</string>
    <string name="drawer_close_nav">Close navigation drawer</string>
    //them san pham
    <string name="Save">Lưu</string>
    <string name="Back">Trở lại</string>
    <string name="themHangHoa">Thêm hàng hóa</string>
    <string name="choose_from_gallery">Chọn hình trong máy</string>
    <string name="open_camera">Chụp hình</string>
    <string name="maHang">Mã hàng</string>
    <string name="tenHang">Tên hàng</string>
    <string name="nhomHang">Nhóm hàng &#xf0da;</string>
    <string name="giaBan">Giá bán</string>
    <string name="giaVon">Giá vốn</string>
    <string name="tonKho">Tồn kho</string>
    //nhap hang
    <string name="tenNhaCungCap">Tên nhà cung cấp</string>
    <string name="donGia">Giá bán</string>
    <string name="soLuong">Số lượng</string>
    <string name="timKiem">Nhập vào tên xe...</string>
    //xuat hang
    <string name="tenKhachHang">Tên khách hàng</string>
    <string name="ngayXuat">Ngày xuất</string>
    <string name="hintChonNgayXuat">Chọn ngày xuất</string>
    <string name="hintChonNgayHetBh">Chọn ngày hết bảo hành</string>
    <string name="ngayHetHanBh">Ngày hết hạn bảo hành</string>
    <string name="chonNgay">Chọn ngày</string>
    <string name="hinhAnh">Hình ảnh</string>
    <string name="update">Cập nhật</string>
    <string name="updateSP">Cập nhật sản phẩm</string>
    <string name="chiTietSp">Chi tiết sản phẩm</string>
    //tra cuu bao hanh
    <string name="traCuu">Tra cứu</string>
    <string name="capNhatSl">Cập nhật số lượng</string>


    //font awersome
    <string name="fa_caret_right">&#xf0da;</string>

    <string name="product_quantity">Số lượng: 10</string>

</resources>